<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>sk.kubisoft.exifutils</groupId>
    <artifactId>exifutils</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <name>Exif Utils</name>
    <packaging>pom</packaging>

    <modules>
        <module>cli</module>
        <module>core</module>
        <module>dedupe</module>
        <module>info</module>
        <module>rename</module>
        <module>set-date</module>
        <module>sort</module>
    </modules>

    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>

        <slf4j.version>2.0.15</slf4j.version>
        <logback.version>1.5.13</logback.version>
        <commons-io.version>2.15.1</commons-io.version>
        <commons-lang3.version>3.14.0</commons-lang3.version>
        <commons-collections4.version>4.4</commons-collections4.version>
        <tika-core.version>2.9.2</tika-core.version>
        <commons-cli.version>1.9.0</commons-cli.version>
        <exiftool-lib.version>3.1.0</exiftool-lib.version>
        <jackson-databind.version>2.17.2</jackson-databind.version>
        <snakeyaml.version>2.2</snakeyaml.version>
        <guava.version>33.4.0-jre</guava.version>
        <timeshape.version>2024a.24</timeshape.version>

        <dagger.version>2.51.1</dagger.version>
        <junit-jupiter.version>5.11.4</junit-jupiter.version>
        <mockito.version>5.15.2</mockito.version>
        <assertj.version>3.26.3</assertj.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!-- Project dependencies -->
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-info</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-dedupe</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-rename</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-set-date</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>sk.kubisoft.exifutils</groupId>
                <artifactId>exifutils-sort</artifactId>
                <version>${project.version}</version>
            </dependency>

            <!-- Libraries -->
            <dependency>
                <groupId>org.slf4j</groupId>
                <artifactId>slf4j-api</artifactId>
                <version>${slf4j.version}</version>
            </dependency>
            <dependency>
                <groupId>ch.qos.logback</groupId>
                <artifactId>logback-classic</artifactId>
                <version>${logback.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-io</groupId>
                <artifactId>commons-io</artifactId>
                <version>${commons-io.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-lang3</artifactId>
                <version>${commons-lang3.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.commons</groupId>
                <artifactId>commons-collections4</artifactId>
                <version>${commons-collections4.version}</version>
            </dependency>
            <dependency>
                <groupId>org.apache.tika</groupId>
                <artifactId>tika-core</artifactId>
                <version>${tika-core.version}</version>
            </dependency>
            <dependency>
                <groupId>commons-cli</groupId>
                <artifactId>commons-cli</artifactId>
                <version>${commons-cli.version}</version>
            </dependency>
            <dependency>
                <groupId>com.github.mjeanroy</groupId>
                <artifactId>exiftool-lib</artifactId>
                <version>${exiftool-lib.version}</version>
            </dependency>
            <dependency>
                <groupId>com.fasterxml.jackson.core</groupId>
                <artifactId>jackson-databind</artifactId>
                <version>${jackson-databind.version}</version>
            </dependency>
            <dependency>
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>${snakeyaml.version}</version>
            </dependency>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${guava.version}</version>
            </dependency>
            <dependency>
                <groupId>net.iakovlev</groupId>
                <artifactId>timeshape</artifactId>
                <version>${timeshape.version}</version>
            </dependency>

        </dependencies>
    </dependencyManagement>

    <!-- Dependencies applied to all modules -->
    <dependencies>
        <!-- Dagger -->
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger</artifactId>
            <version>${dagger.version}</version>
        </dependency>
        <dependency>
            <groupId>com.google.dagger</groupId>
            <artifactId>dagger-compiler</artifactId>
            <version>${dagger.version}</version>
            <scope>provided</scope>
        </dependency>

        <!-- Test Dependencies -->
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>${junit-jupiter.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-core</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-junit-jupiter</artifactId>
            <version>${mockito.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>${assertj.version}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>${logback.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <compilerArgs>
                        <arg>-Xlint:-requires-transitive-automatic</arg>
                    </compilerArgs>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>com.google.dagger</groupId>
                            <artifactId>dagger-compiler</artifactId>
                            <version>${dagger.version}</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
                <configuration>
                    <argLine>
                        -Xshare:off -javaagent:"${settings.localRepository}/org/mockito/mockito-core/${mockito.version}/mockito-core-${mockito.version}.jar"
                    </argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
